--- a/tidy-model.Rmd
+++ b/tidy-model.Rmd
@@ -10,22 +10,10 @@ knitr::opts_chunk$set(echo = TRUE)
 library('tidyverse') ; library('modeldata')
 ``` 
 
-## R Markdown
+## What is that sound?
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+In this report, we examine what factors predict a cricket's chirp rate.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r summary, echo = FALSE}
+summary(crickets)
+``` 
