--- a/tidy-model.Rmd
+++ b/tidy-model.Rmd
@@ -39,7 +39,20 @@ summary.lm(temp_lm)
 
 Based on a scatter plot of temperature and chirping and a correlation test, it seems that as temperature increases one degree, the rate of chirping increases about 4.2 chirps per minute.
 
+## Species-specific effects of temperature on chirping
 
+```{r species, echo= FALSE}
+ggplot(crickets, aes(x = temp, y = rate, color = species)) +
+  geom_point() + 
+  geom_smooth(method = 'lm') +
+  ggtitle("Plot of temperature and chirp rate for two species of crickets") +
+  ylab('Chirp rate (per min.)') +
+  xlab('Temperature (Celsius)')
+  
+  
+species_lm <- lm(rate ~ temp + species, crickets)
 
+summary.lm(species_lm)
+```
 
-
+Based on the scatter plot of the two species, we can see that there are a high correlation between temperature and chirp rate. When we clump the species together, the linear model explains about 92% of the variance, but when we separate into two different species, the model explains 99% of the variance in the data! This is a much better model.
