--- a/tidy-model.Rmd
+++ b/tidy-model.Rmd
@@ -56,3 +56,32 @@ summary.lm(species_lm)
 ```
 
 Based on the scatter plot of the two species, we can see that there are a high correlation between temperature and chirp rate. When we clump the species together, the linear model explains about 92% of the variance, but when we separate into two different species, the model explains 99% of the variance in the data! This is a much better model.
+
+## Interactions
+
+```{r species historgram, echo = FALSE}
+ggplot(crickets, aes(x = rate, fill = species)) +
+  geom_histogram(position = 'identity', alpha = 0.7, bins = 8) + 
+  ggtitle("Distribution of the chirp rate of crickets") +
+  xlab('Chirp rate (per min.)')
+```
+
+Based on the histogram, difference species of crickets occupy different ranges of temperature. 
+
+```{r interactions, echo= FALSE}
+ggplot(crickets, aes(x = temp, y = rate, color = species)) +
+  geom_point() + 
+  geom_smooth(method = 'lm') +
+  ggtitle("Plot of temperature and chirp rate for two species of crickets") +
+  ylab('Chirp rate (per min.)') +
+  xlab('Temperature (Celsius)')
+  
+species_x_temp_lm <- lm(rate ~ temp + species + temp:species, crickets) 
+summary.lm(species_x_temp_lm)
+
+anova(species_lm, species_x_temp_lm)
+```
+
+After checking for interactions, the species model proved to be more meaningful for making predictions because this comparison produces a p-values far above 0.05 and is not statistically significant.
+
+
