Created a linear model for diamond price using at least 3 variables

--- a/tidy-model.Rmd
+++ b/tidy-model.Rmd
@@ -84,18 +84,18 @@ anova(species_lm, species_x_temp_lm)
 
 After checking for interactions, the species model proved to be more meaningful for making predictions because this comparison produces a p-values far above 0.05 and is not statistically significant.
 
-
 ## Modeling Diamond Prices
 
 ```{r diamond summary, echo = FALSE}
 summary(diamonds)
-ggplot(diamonds, aes(x = carat, y = price)) +
+ggplot(diamonds, aes(x = carat, y = price, color = cut)) +
   geom_point() +
-  ggtitle("Scatterplot of the Diamonds and carrat size") +
+  geom_smooth(method = 'lm') +
+  ggtitle("Scatterplot of the Diamonds and carrat size by cut") +
   xlab('Carat size') +
   ylab('Price')
 ```
 
-There is a positive correlation between the price and carat size of a diamond. It can also be seen that many of the diamonds are right at or above carat size whole numbers.
+There is a positive correlation between the price and carat size of a diamond. Diamonds that have a worse cut will increase in price at a lower rate than diamonds that have a higher cut. It can also be seen that many of the diamonds are right at or above carat size whole numbers.
 
 
